2009-07-15  Janus Weil  <janus@gcc.gnu.org>

PR fortran/40743
	* resolve.c (resolve_symbol): Don't resolve the formal namespace of a
	contained procedure.


2009-07-15  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/40743
	* gfortran.dg/interface_assignment_4.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@149662 138bc75d-0d04-0410-961f-82ee72b054a4